# Keystone-Life-Science-System

./: .env.example  .gitignore  .mcp.json  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  INTEGRATIONS.md  Keystone_BuildPlan_and_Demo.md  README.md  calibrate.py  fly.toml  pyproject.toml  requirements.txt  run_workbench.py
.claude/: launch.json
.github/workflows/: ci.yml
docs/: current-keystone-audit.md  demo-script.md  labos-demo-90s.md  labos-reality-audit.md  red-to-green-audit.md  research-audit.md  scientist-readiness-audit.md
examples/: maya-chen-refs.bib  retrospective-insulin-cdk4-2016.bib  retrospective-nature-reviews-2006.bib
examples/bench_data/: bad_plate.csv  borderline_plate.csv  clean_plate.csv
examples/frontier_corpora/: aging_clocks.json  organoid_drug_screen.json  phage_pseudomonas.json
examples/pattern_corpora/: gbm_cathepsin_b.json  gbm_cathepsin_real.json  insulin_cdk4.json  prostate_invasion_real.json
keystone/: agent_sdk_demo.py  biology_chain.py  core.py  cv_lab.py  data_gbm.py  data_ich.py  data_insulin.py  data_tcell.py  decision_engine.py  discovery_run.py  field_integrity.py  frontier_guard.py  gbm_spec.py  gladstone_data.py  ich_spec.py  insulin_spec.py  integrity_center.py  integrity_report.py  live_debate.py  mcp_server.py  notebook.py  orchestrator.py  prior_art.py  reasoning_panel.py  reasoning_receipt.py  replay.py  tcell_spec.py  workbench.py  workspace.py
keystone/agents/: bench_reviewer.py  cell_eval.py  claude_reasoner.py  flaw_catch_eval.py  pattern_miner.py  reasoner.py
keystone/artifacts/: graph_export.py  reasoning_render.py  render.py  report.py  repro_bundle.py
tests/: test_bench_reviewer.py  test_cell_eval.py  test_claim_model.py  test_connectors.py  test_counterfactual.py  test_decision_engine.py  test_discovery_os.py  test_discovery_run.py  test_field_integrity.py  test_flaw_injection.py  test_frontier_guard.py  test_gladstone_data.py  test_graph_export.py  test_ich.py  test_ingest.py  test_insulin.py  test_life_science.py  test_mcp.py  test_no_internal_ids.py  test_opentargets.py  test_pattern_mining.py  test_phase2_labos.py  test_post_pub.py  test_prior_art.py  test_prior_art_identifier.py  test_production.py  test_repro_bundle.py  test_research_cell.py  test_safety_invariants.py  test_schema_validation.py  test_skill.py  test_smoke.py  test_target_ranking.py  test_th2_pipeline.py  test_ui.py  test_visual_evidence_lab.py
(+129 files in other folders)
