[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "keystone-workbench"
version = "0.1.0"
description = "Keystone — an agentic scientific discovery workbench for translational biomedical research (evidence integrity + decision engine, provenance-grounded, no fabrication)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Keystone" }]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
live = ["anthropic>=0.39"]                              # live Claude reasoner
agent = ["mcp>=1.0", "claude-agent-sdk>=0.2"]           # MCP server + Agent SDK
dev = ["pytest>=7", "pytest-cov>=4"]
ui = ["fastapi>=0.110", "uvicorn>=0.27"]

[project.scripts]
keystone = "run_workbench:main"
keystone-mcp = "keystone.mcp_server:main"
keystone-decide = "keystone.decision_engine:main"

[tool.setuptools]
packages = [
    "keystone",
    "keystone.agents",
    "keystone.deterministic",
    "keystone.connectors",
    "keystone.artifacts",
    "keystone.calibration",
    "keystone.ingest",
    "keystone.ui",
]

[tool.setuptools.package-data]
"keystone.connectors" = ["fixtures/*.json"]
"keystone.calibration" = ["*.jsonl"]
"keystone.ui" = ["static/*.html", "static/lib/*.js", "static/lib/*.css"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
